# ai-podcast

./: README.md  nitric.test.yaml  nitric.yaml  pyproject.toml  python.dockerfile.dockerignore  torch.dockerfile  torch.dockerfile.dockerignore
batches/: podcast.py
common/: resources.py
services/: api.py
