[project]
name = "python-uv-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nitric ==1.2.3",
    "betterproto ==2.0.0b6",
    "huggingface-hub>=0.26.2",
]

[project.optional-dependencies]
ml = [
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "transformers>=4.46.2",
]

[tool.uv]
dev-dependencies = [
    "watchdog>=5.0.3",
]
